# UMUD

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Code_of_conduct.md  Readme.md  database.py  environment.yml  homepage.py  pyproject.toml  requirements.txt  test.py  webapp.py
changelog.d/: 20240526_170932_paul.ritsche_webapp.rst  20240526_221231_paul.ritsche_webapp.rst  20240605_220718_paul.ritsche_webapp.rst  20240711_234716_paul.ritsche_webapp.rst  20240727_155340_paul.ritsche_webapp.rst  20241207_014728_paul.ritsche_webapp_pages.rst  20241207_014728_somebody_webapp_pages.rst  20241208_152059_paul.ritsche_webapp_pages.rst  20241208_152059_somebody_webapp_pages.rst  20250103_212223_paul.ritsche_towards_v0_1_0.rst  20250106_074315_paul.ritsche_towards_v0_1_0.rst  20250118_171520_paul.ritsche_towards_v0_1_0.rst  20250125_153818_paul.ritsche_towards_v0_1_0.rst  20250204_091521_somebody_new_datasets_PR.rst
tests/: test_template_data.py  test_webapp.py
webapp/: __init__.py  database.py  webapp.py
webapp/database_entries/: _dictionary_AnkleImage_2024.json  _dictionary_BicepsFem3DUS_2024.json  _dictionary_DLSegMskNeromDisease_2021.json  _dictionary_DLTrackUS_2023.json  _dictionary_DL_Track_US_2023.py  _dictionary_DeepACSA_2022.json  _dictionary_DeepACSA_2022.py  _dictionary_DeepMTJ_2021.json  _dictionary_DeepMTJ_2021.py  _dictionary_FALLMUD_2017.json  _dictionary_FALLMUD_2017.py  _dictionary_GasFasTrack_2019.json  _dictionary_Heelraise_2017.json  _dictionary_Leg3dUS_2024.json  _dictionary_LuminousMulitifidus_2020.json  _dictionary_NeuAgeOld_2024.json  (+4 more)
(+16 files in other folders)
