[project]
dynamic = ["version"]
version = "0.0.1"
name = "Universal Muscle Ultrasound Database"
requires-python = ">= 3.9"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "0.0.1"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

